--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
